PlugIn Management support + Switch to pure Metabuild builds